Edited project name in composer.json.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "mthabisi/myfolio",
+    "name": "mtha-folio/json",
     "description": "Personal profile website",
     "require": {}
 }
